# Eden

./: .editorconfig  .gitignore  .gitmodules  .tmux  .travis.yml  CMakeLists.txt  Install.bat  Readme.md  appveyor.yml  generate-projects.py  readme.md
Eden/: CMakeLists.txt  Precompiled.cpp  Precompiled.h
Eden/Application/: Appliation.cpp  Application.h  Application_Win32.cpp  WindowInfo.cpp  WindowStyles.h
Eden/Application/Win32/: Win32-Window.cpp  Win32-Window.h
Eden/Application/Windows/: Window.cpp  Window.h
Eden/Core/: Assert.h  AssetManager.cpp  AssetManager.h  AssetPool.h  Common.h  Debug.h  MD5.cpp  MacroHelpers.h  OS.cpp  OS.h  Path.cpp  Path.h  Platform.h  ScopeGuard.h  TypeInfo.h  TypeName.h  Types.h  Utility.h
Eden/Engine/: CMakeLists.txt  Precompiled.h
Eden/Engine/Application/: Application.cpp  Application.h  CMakeLists.txt  Event.h  Input.h  Window.cpp  Window.h
Eden/Engine/Application/Linux/: Window.h
Eden/Engine/Application/Win32/: Window.h
Eden/Engine/Core/: AssetManager.h  CMakeLists.txt  Path.cpp  Path.h  Platform.h  Shareable.h
Eden/Engine/Core/ct/: is_valid.h  static_if.h
Eden/Engine/Entity/: Query.h
Eden/Engine/Math/: CMakeLists.txt  Vector.h
Eden/Entity/: Component.h  ComponentBase.h  Database.h  Entity.h  Guid.h  Query.h  System.h  TypeID.h
Eden/Game/: Input.cpp  Input.h  Window.cpp  Window.h
Eden/Graphics/: Buffer.cpp  Buffer.h  Mesh.cpp  Mesh.h  VertexAttribute.cpp  VertexAttribute.h
Eden/Graphics/Vulkan/: Context.h  Debug.cpp  Debug.h  Device.cpp  Device.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  Utility.h  Vulkan.h
Eden/Logging/: Log.h
Eden/Math/: Math.h  Matrix.cpp  Quaternion.cpp  Quaternion.h  Vector.cpp
Eden/Sample/: main.cpp
Eden/Unittests/: UnitTest.cpp
Eden/Unittests/Application/: Event.UnitTests.cpp
Eden/Unittests/Core/: Path.Unittests.cpp  TypeInfo.UnitTests.cpp
Eden/_unused/Core/: MD5.h  OS.cpp  OS.h
Eden/_unused/Entity/: Query.h
Eden/unused/Application/: Application.h  WindowStyles.h
Eden/unused/Math/: Angle.cpp  MathFunctions.h  Vector.cpp  Vector.h  VectorFunctions.h
Resources/Doc/: code-guildlines.md
Resources/Docs/: code-guildlines.md
Scripts/Project/: genie.lua
Tests/: UnitTest.cpp
Tests/Core/: Path.Unittests.cpp  TypeInfo.UnitTests.cpp
Tests/Entity/: Entity.UnitTests.cpp  Query.UnitTests.cpp
UnitTests/: UnitTest.cpp  UnitTest.h
UnitTests/Core/: TypeInfo.UnitTests.cpp
UnitTests/Entity/: Entity.UnitTests.cpp
VS2015/: Eden.sln
VS2015/Eden/: Eden.vcxproj  Eden.vcxproj.filters
VS2015/Eden Engine/: Eden Engine.vcxproj  Eden Engine.vcxproj.filters
VS2015/EdenVulkan/: EdenVulkan.vcxproj
VS2015/UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters
VS2015/testing/: Source.cpp  StaticComponentCleanupTesting.cpp  testing.vcxproj  testing.vcxproj.filters
_unused/Application/: Application.cpp  Application.h  WindowStyles.h
_unused/Application/Win32/: Window.cpp  Window.h
_unused/Application/Windows/: Window.cpp  Window.h
_unused/Core/: AssetManager.cpp  AssetManager.h  AssetPool.h  Logging.cpp  Logging.h  MD5.cpp  MD5.h  OS.cpp  OS.h  TypeInfo.h
_unused/Entity/: Component.h  Database.h  Query.h  System.h
_unused/Graphics/Vulkan/: Context.h  Debug.cpp  Debug.h  Device.cpp  Device.h  Instance.cpp  Instance.h  LayerExtentions.cpp  LayerExtentions.h  PhysicalDevice.cpp  PhysicalDevice.h  (+7 more)
_unused/Logging/: Log.h
_unused/Math/: Angle.cpp  Angle.h  Math.h  MathFunctions.h  Matrix.h  Vector.cpp  Vector.h  Vector.inl  VectorFunctions.h  VectorFunctions.inl
cmake/: build_problems.cmake  enable_sanitizers.cmake  filter_group.cmake  flags.cmake  macros.cmake
docs/design/: ecs-design.md
eden/: CMakeLists.txt  Precompiled.h  ecs.hpp  eden.cpp  renderer.hpp
eden/Application/: Application.cpp  Application.h  Event.h  Input.cpp  Input.h  Window.cpp  Window.h  WindowInfo.cpp  WindowInfo.h
eden/Core/: Common.h  Debug.h  MacroHelpers.h  Path.cpp  Path.h  Platform.h  ScopeGuard.h  Shareable.h  Singleton.h  TFlags.h  TypeMap.h  Types.h  Unique.h  Utility.h
eden/Core/ct/: is_valid.h  static_if.h
eden/Ecs/: Entity.h
eden/Entity/: Component.h  Database.h  Guid.h  Query.h
eden/Math/: Matrix.cpp  Matrix.h
eden/Rendering/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  RenderTarget.cpp  RenderTarget.h
eden/app/: app.cpp  app.hpp  event.hpp  event.inl  input.cpp  input.hpp  window.cpp  window.hpp
eden/core/: platform.hpp
eden/ecs/: archetype.hpp  archetype.inl  defines.hpp  director.cpp  director.hpp  director.inl  dispatcher.cpp  dispatcher.hpp  dispatcher.inl  entity.cpp  entity.hpp  entity.inl  id.hpp  iterator.hpp  iterator.inl  mask.cpp  mask.hpp  mask.inl  pool.cpp  pool.hpp  pool.inl  property.hpp  property.inl  store.hpp  store.inl  system.cpp  system.hpp  utils.hpp  view.hpp  view.inl
eden/input/: keys.hpp
eden/renderer/: render_context_flags.hpp  render_object.hpp  render_pass.hpp  render_target.hpp  render_target_flags.hpp  resource.hpp  resource_flags.hpp  surface.hpp  texture.hpp  texture_flags.hpp  types.hpp  window.cpp  window.hpp  window_flags.hpp
eden/renderer/api/gl/: gl_render_target.hpp  opengl.hpp
eden/renderer/api/gl/internal/render_state/: gl_state.hpp  gl_state_manager.hpp
eden/renderer/api/gl/internal/texture/: gl_frame_buffer.cpp  gl_frame_buffer.hpp
eden/renderer/platform/: native_handle.hpp
eden/renderer/platform/win32/: win32_callback.cpp  win32_callback.hpp  win32_keymap.cpp  win32_keymap.hpp  win32_native_handle.hpp  win32_window.cpp  win32_window.hpp
resources/doc/: guidelines.md
samples/: CMakeLists.txt
samples/01-create-window/: main.cpp
samples/02-ecs-usage/: main.cpp
samples/test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  UnitTest.cpp  UnitTest.h  catch.hpp  test.cpp  test.hpp
tests/Application/: Event.UnitTests.cpp
tests/Core/: Path.Unittests.cpp
tests/Core/ct/: static_if.Unittests.cpp
tests/Entity/: Entity.UnitTests.cpp  Query.UnitTests.cpp
tests/app/: event.cpp
tests/ecs/: eds.cpp  mask.cpp
(+13 files in other folders)
